# SDL_pnglite

./: CMakeLists.txt  README.rst  SDL_pnglite.c  SDL_pnglite.h  SDL_pnglite.kdev4  main.c  pnglite.c  pnglite.h  test-lib-load.c  test-load.c  test-save-paletted-bmp.c  test-save.c  test-suite.c
